--- a/.github/workflows/deploy-cdk.yml
+++ b/.github/workflows/deploy-cdk.yml
@@ -1,4 +1,4 @@
-name: deploy-stg-cdk
+name: deploy-cdk
 
 on:
   pull_request:
@@ -9,14 +9,17 @@ on:
       - main
 
 jobs:
-  deploy-stg-cdk:
+  deploy-cdk:
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: read
     steps:
       - uses: actions/checkout@v2
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          role-to-assume: ${{ secrets.STG_AWS_IAM_ROLE_ARN }}
+          role-to-assume: ${{ secrets.AWS_IAM_ROLE_ARN }}
           aws-region: ap-northeast-1
 
       - name: Setup Node
