--- a/.github/workflows/deploy-cdk.yml
+++ b/.github/workflows/deploy-cdk.yml
@@ -33,9 +33,9 @@ jobs:
       - name: CDK Diff Check
         if: contains(github.event_name, 'pull_request')
         run: |
-          npm run cdk diff
+          npm run cdk -- diff "*"
 
       - name: CDK Deploy
         if: contains(github.event_name, 'push')
         run: |
-          npm run cdk deploy
+          npm run cdk -- deploy --require-approval never "*"
